# emb_playground

./: .gitignore  Cargo.toml  README.md  board.rs  boards.toml  build.rs  memory.ld.x
.cargo/: config
apps/net_ping/: Cargo.toml  main.rs
boards/flexperiment_mini/: Cargo.toml  lib.rs
boards/flexperiment_nano/: Cargo.toml  lib.rs
boards/netboard/: Cargo.toml
hal/: Cargo.toml
mcu/stm32f0xx/: Cargo.toml  lib.rs
mcu/stm32f0xx/peripherals/: Cargo.toml
mcu/stm32f20x/: Cargo.toml  ethmac.rs  gpio.rs  lib.rs  rcc.rs
mcu/stm32f20x/clk_plugin/: Cargo.toml  lib.rs
mcu/stm32f20x/peripherals/: Cargo.toml
